# python-project

./: .gitignore  LICENSE.txt  README.md  Tutorial.ipynb  pyproject.toml  requirements.txt
.virtual_documents/: Untitled.ipynb
src/clusterviz/: datasets.py  preprocessing.py
src/clusterviz/src/clusterviz/: datasets.py
src/mypackage/: __init__.py  module1.py  module2.py
src/mypackage.egg-info/: PKG-INFO  SOURCES.txt
