[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
authors = [{name="Sara Zhara"}]
description = "A small package for data analysis and visualization."
readme = "README.md"
license = {text="MIT"}
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
